# SlideScribe

./: .coveragerc  .gitignore  API_DOCUMENTATION.md  PROJECT_STATUS.md  README.md  bootloader.py  environment.yml  generate_docs.py  integration_verification.py  package-lock.json  package.json  project-structure.md  pytest.ini
backend/: .env.example  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  database.py  docker-compose.yml  environment.yml  pyproject.toml  setup.py  setup_infrastructure.ps1  test_auth.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_voice_profiles_table.py  0e4cedb49361_create_users_table.py  1a2b3c4d5e6f_create_tts_cache_table.py  2b3c4d5e6f7a_create_api_usage_table.py  3c4d5e6f7a8b_create_presentations_table.py  4d5e6f7a8b9c_create_slides_table.py  5e6f7a8b9c0d_create_audio_files_table.py  65ac0df3d37c_add_missing_user_columns.py  6f7a8b9c0d1e_create_subtitles_table.py  7a8b9c0d1e2f_create_refinement_cache_table.py  8b9c0d1e2f3a_create_exports_table.py  c89990881f55_seed_test_user.py  ebf8fd082fd7_add_presentation_slides_audio_cache_.py
backend/chatterbox_api/: Dockerfile  environment.yml  main.py
backend/models/: api.py  db.py  enums.py  presentation.py  refinement.py  subtitle.py  tts.py  user.py
backend/services/: __init__.py  auth.py  auth_service.py  queue.py  websocket_progress.py
backend/shared/: __init__.py  ai_models.py  azure_openai_client.py  cache.py  config.py  db.py  enums.py  file_utils.py  http_client.py  logging_utils.py  media_utils.py  models.py  presentation_models.py  response_models.py  subtitle_models.py  tts_models.py  utils.py  utils_new.py
backend/tests/: conftest.py  test_ai_refinement.py  test_analytics_service.py  test_audio_processing_service.py  test_auth.py  test_cache.py  test_contextual_refiner.py  test_end_to_end_workflow.py  test_file_utils.py  test_http_client.py  test_image_analysis_service.py  test_narration_service.py  test_queue.py  test_ssml_builder_service.py  test_ssml_builder_simple.py  test_subtitle_service.py  test_tts_service.py  test_utils.py  test_voice_profile_auto_apply.py  test_voice_profile_service.py  test_websocket_comprehensive.py  test_websocket_progress.py
(+188 files in other folders)
