[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Backend package for SlideScribe (AI refinement and TTS)"
authors = [
    { name = "Andreas Malathouras", email = "steelstridertgm@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "openai>=1.3.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "pytest>=7.4.3",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.7",
    "mypy>=1.7.1",
]
azure = [
    "azure-cognitiveservices-speech>=1.34.0",
]

[tool.ruff]
# Python 3.13+ compatible
target-version = "py313"
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "alembic/versions",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable linting and formatting
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

# Minimal ignores for legitimate cases only
ignore = [
    "B008",   # Do not perform function calls in argument defaults (FastAPI uses this pattern)
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"tests/*" = ["B011"]      # Allow assert False in tests
